--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "dev": "node server.js",
-    "build": "next build && next export"
+    "build": "next build && next export",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
