--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "mocha",
     "dev": "node server.js",
-    "build": "next build && next export",
-    "start": "node server.js"
+    "build": "node server.js"
   },
   "keywords": [],
   "author": "",
