--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "dev": "node server.js",
     "build": "next build",
-    "start": "node server.js"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
